--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
     flutter_tts: ^4.0.2
     theme_provider: ^0.6.0
     flutter_tex: ^4.0.9
-    google_generative_ai: ^0.4.5
+    openai_flutter: ^1.0.0
     flutter_markdown: ^0.7.3+1
     animated_text_kit: ^4.2.2
     loading_animation_widget: ^1.2.1
