--- a/.github/workflows/build-release-cs.yml
+++ b/.github/workflows/build-release-cs.yml
@@ -1,8 +1,12 @@
 name: Build & Upload Flutter APK
 
 on:
-  release:
-    types: [created]
+
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 
 jobs:
   build-android:
