--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.repositories.http.enableSecureProtocol=true
+org.gradle.repositories.https.enableSecureProtocol=true
+org.gradle.repositories.http.secureProtocol=true
+org.gradle.repositories.https.secureProtocol=true
