--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
     url_launcher: ^6.3.0
     flutter_pdfview: ^1.3.2
     path_provider: ^2.1.4
-    syncfusion_flutter_pdfviewer: ^26.2.7
+    syncfusion_flutter_pdfviewer: ^32.1.20
     ionicons: ^0.2.2
     share_plus: ^7.2.2
     # permission_handler: ^11.3.1
@@ -49,7 +49,7 @@ dependencies:
     flutter_tts: ^4.0.2
     theme_provider: ^0.6.0
     flutter_tex: ^4.0.9
-    openai_flutter: ^1.0.0
+    dart_openai: ^5.1.0
     flutter_markdown: ^0.7.3+1
     animated_text_kit: ^4.2.2
     loading_animation_widget: ^1.2.1
