--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
     loading_animation_widget: ^1.2.1
     another_flutter_splash_screen: ^1.2.1
     lottie: ^3.0.0
+    file_picker: ^8.0.0+1
 dev_dependencies:
     flutter_test:
         sdk: flutter
