--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
     another_flutter_splash_screen: ^1.2.1
     lottie: ^3.0.0
     file_picker: ^8.0.0+1
+    intl: ^0.19.0
 dev_dependencies:
     flutter_test:
         sdk: flutter
